--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
 <body>
 
+    <div id="top"></div>
+
     <div id="background">
         <div></div>
     </div>
 
     <div class="top-header">
-        <ul>
-            <li class="escritorios"> ◉ <span style="font-size: 20.7px;"> ○ ○ ○ ○ ○ ○ ○</span></li>
-            <li class="hora">20:17</li>
-        </ul>
-    </div>
-
-    <img class="foto" src="assets/icon.png">
+        <div class="escritorios"><p> ◉ <span style="font-size: 20.7px;"> ○ ○ ○ ○ ○ ○ ○</span></p></div>
+        <div><a class="conceptos-top" href="#conceptos">Conceptos</a></div>
+        <div class="home"><a href="#top"><img class="foto" src="assets/icon.png"></a></div>
+        <div><a class="creacion" href="rice-tutorial/rice-tutorial.html">Creación de un rice</a></div>
+        <div class="hora">20:17</div>
+    </div>    
 
     <div class="terminal">
         <p class="neofetch"><span style="color:rgb(103, 92, 255)">ricing@linux</span>:<span style="color:rgb(0, 128, 255)">~</span> neofetch</p>
@@ -47,7 +48,7 @@
         
     </div>
 
-    <div class="contenido">
+    <div id="conceptos" class="contenido">
         <p class="titulo">RICING LINUX</p>
         <div class="fila1">
     
