--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
             </div>
         </div>
 
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img height="130px" width="230px" src="assets/desktoposu.png" alt="">
+                </div>
+                <div class="flip-card-back">
+                    <h2>ABRIR</h2>
+                    <a href="https://github.com/Battlesquid/dotfiles" target="_blank" ><img height="50px" width="50px" src="assets/gitlogo.png" alt=""></a>
+                </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
