--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="shortcut icon" href="assets/icon.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    
 </head>
 
 <body>
@@ -22,7 +23,8 @@
         <div><a class="conceptos-top" href="#conceptos">Conceptos</a></div>
         <div class="home"><a href="#top"><img class="foto" src="assets/icon.png"></a></div>
         <div><a class="creacion" href="rice-tutorial/rice-tutorial.html">Creación de un rice</a></div>
-        <div class="hora">20:17</div>
+        <div class="hora"></div>
+        <script src="script.js"></script>
     </div>    
 
     <div class="terminal">
