--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div><a class="conceptos-top" href="#conceptos">Conceptos</a></div>
         <div class="home"><a href="#top"><img class="foto" src="assets/icon.png"></a></div>
         <div><a class="creacion" href="rice-tutorial/rice-tutorial.html">Creación de un rice</a></div>
-        <div class="hora">20:17</div>
+        <div class="hora"></div>
     </div>    
 
     <div class="terminal">
@@ -129,6 +129,8 @@
 
 
     </div>
+
+    <script src="script.js" />
 
 </body>
 
